# rl_drone_object_search

./: .gitignore  CITATION.cff  README.md  compare_policies.ipynb  create_env_figures.ipynb  create_results_plots.ipynb  evaluate.py  pyproject.toml  requirements.txt  run_evaluations.sh  run_trainings_rl.sh  run_trainings_yolo.sh  train_rl.py
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  post-create.sh
.github/workflows/: citation.yml
drone_grid_env/: __init__.py  logger.py
drone_grid_env/assets/: land_world.yaml  random_world.yaml
drone_grid_env/envs/: action.py  drone.py  drone_grid_env.py  rendering.py  reward.py  state.py  stopping_criteria.py  utils.py
drone_grid_env/envs/io/: csv.py  kml.py  orthomosaic.py  topcon.py
drone_grid_env/envs/world/: __init__.py  base.py  orthomosaic_world.py  sim_world.py
drone_grid_env/utils/: __init__.py  draw_field.py  play.py  plots.py
drone_grid_env/wrappers/: __init__.py  clip_reward.py  episode_info_buffer_wrapper.py  flatten_wrapper.py  gif_wrapper.py
experiments/detection_errors/: dqn_level_0.yaml  dqn_level_1.yaml  dqn_level_2.yaml  dqn_level_3.yaml  dqn_level_4.yaml  env_config_level_0.yaml  env_config_level_1.yaml  env_config_level_3.yaml  env_config_level_4.yaml
experiments/distributions/: dqn_medium.yaml  dqn_random.yaml  dqn_strong.yaml  env_config_medium.yaml  env_config_random.yaml
experiments/prior_knowledge_quality/: dqn_level_0.yaml  dqn_level_1.yaml  dqn_level_2.yaml  dqn_level_3.yaml  dqn_level_4.yaml  env_config_level_0.yaml  env_config_level_1.yaml  env_config_level_2.yaml  env_config_level_3.yaml  env_config_level_4.yaml
experiments/showcase/: clustered_1.yaml  clustered_2.yaml  clustered_3.yaml  clustered_4.yaml  draw_fields.sh  sim_clustered_1.yaml  sim_clustered_2.yaml
experiments/stopping_criteria/: dqn_all_objects.yaml  dqn_coverage_50.yaml  dqn_coverage_75.yaml  dqn_land.yaml  dqn_new_objects_15.yaml  dqn_new_objects_150.yaml  dqn_new_objects_25.yaml  dqn_new_objects_50.yaml  dqn_new_objects_75.yaml  env_config_coverage_50.yaml  env_config_coverage_75.yaml  env_config_land.yaml  env_config_new_objects_15.yaml  env_config_new_objects_150.yaml  env_config_new_objects_25.yaml  env_config_new_objects_50.yaml  env_config_new_objects_75.yaml
sb3_custom/: custom_dqn_algorithm.py  double_dqn_algorithm.py  fields2cover_algorithm.py
sb3_custom/callbacks/: __init__.py  codecarbon.py  episode_info_logger.py  evaluation.py  exceptions.py  model_summary.py  record_video.py  utils.py  wandb.py
sb3_custom/policies/: __init__.py  local_global_feature_extractor.py  local_global_softmax_scaling_policy.py  softmax_scaling_network.py
test/: conftest.py  test_config_1.yaml  test_config_2.yaml  test_config_3.yaml  test_config_4.yaml  test_config_invalid_start.yaml2  test_drone.py  test_env.py  test_env_utils.py  test_rewards.py
